--- a/bind.html
+++ b/bind.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <link rel="stylesheet" href="style/minireset.css">
     <link rel="stylesheet" href="style/bind.css">
+	<link rel="stylesheet" href="./style/font-awesome.min.css"> 
 </head>
 <body>
     <div class="wrap">
@@ -20,11 +21,16 @@
     </div>
     <script src="js/rem.js"></script>
     <script>
+        var wrap = document.querySelector(".wrap");
         var inputs = document.querySelectorAll("form input");
         var openid = "123456";
         var uid = "1989654";
         inputs[2].onclick = function () {
            if(inputs[0].value.trim()&&inputs[1].value.trim()){
+                var mask = document.createElement("div");
+                mask.className = "mask";
+                mask.innerHTML = '<div><i class="fa fa-spinner fa-pulse fa-x fa-fw"></i></div>';
+                wrap.appendChild(mask);
                 var ajax = new XMLHttpRequest();
                 ajax.open("POST", "http://interface.simihua.cn/prevent/api/v1/parent_user/create",true);
                 var data = "uid=" + uid
@@ -40,8 +46,16 @@
                         // inputs[0].value = "";
                         // inputs[1].value = "";
                     }else{
-                        window.location.href = "personal.html?openid="+openid;
+                        var r = confirm("绑定成功，是否跳转到个人中心？")
+                        if (r == true) {
+                            // window.location.href = "personal.html?openid=" + openid;
+                            window.location.reload();
+                        }else {
+                            console.log(11)
+                        }
+                        
                     }
+                    mask.parentNode.removeChild(mask);
                 };
                 ajax.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
                 ajax.send(data)
