--- a/guest.html
+++ b/guest.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <link rel="stylesheet" href="style/minireset.css">
     <link rel="stylesheet" href="style/guest.css">
+    <link rel="stylesheet" href="./style/font-awesome.min.css">  
 </head>
 <body>
     <div class="wrap">
