loading-animation changed by css3 animation

--- a/bind.html
+++ b/bind.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <link rel="stylesheet" href="style/minireset.css">
     <link rel="stylesheet" href="style/bind.css">
-	<link rel="stylesheet" href="./style/font-awesome.min.css"> 
-</head>
+	<link rel="stylesheet" href="//at.alicdn.com/t/font_621448_y4e681bzbqhbyb9.css">
 <body>
     <div class="wrap">
         <img src="img/top.png" alt="">
@@ -20,49 +19,6 @@
         <img src="img/bg.png" alt="">
     </div>
     <script src="js/rem.js"></script>
-    <script>
-        var wrap = document.querySelector(".wrap");
-        var inputs = document.querySelectorAll("form input");
-        var openid = "123456";
-        var uid = "1989654";
-        inputs[2].onclick = function () {
-           if(inputs[0].value.trim()&&inputs[1].value.trim()){
-                var mask = document.createElement("div");
-                mask.className = "mask";
-                mask.innerHTML = '<div><i class="fa fa-spinner fa-pulse fa-x fa-fw"></i></div>';
-                wrap.appendChild(mask);
-                var ajax = new XMLHttpRequest();
-                ajax.open("POST", "http://interface.simihua.cn/prevent/api/v1/parent_user/create",true);
-                var data = "uid=" + uid
-                    + "&openid=" + openid
-                    + "&phone=" + inputs[1].value.trim()
-                    + "&name=" + inputs[0].value.trim();
-                console.log(data)
-                ajax.onload = function () {
-                    var res = JSON.parse(ajax.responseText);
-                    console.log(res)
-                    if(!res.state){
-                        alert(res.message);
-                        // inputs[0].value = "";
-                        // inputs[1].value = "";
-                    }else{
-                        var r = confirm("绑定成功，是否跳转到个人中心？")
-                        if (r == true) {
-                            // window.location.href = "personal.html?openid=" + openid;
-                            window.location.reload();
-                        }else {
-                            console.log(11)
-                        }
-                        
-                    }
-                    mask.parentNode.removeChild(mask);
-                };
-                ajax.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-                ajax.send(data)
-           }else{
-               alert("请输入内容！")
-           }
-        }
-    </script>
+    <script src="js/bind.js"></script>
 </body>
 </html>
