--- a/guest.html
+++ b/guest.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <link rel="stylesheet" href="style/minireset.css">
     <link rel="stylesheet" href="style/guest.css">
-	<link rel="stylesheet" href="//at.alicdn.com/t/font_621448_y4e681bzbqhbyb9.css">    
+	<link rel="stylesheet" href="http://at.alicdn.com/t/font_621448_y4e681bzbqhbyb9.css">    
 </head>
 <body>
     <div class="wrap">
